--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,4 +2,7 @@
 @import 'abstracts/functions';
 @import 'abstracts/mixins';
 
+@import 'base/fonts';
+@import 'base/global';
+
 @import 'pages/home';
