update home page

--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -70,3 +70,11 @@ ul {
     }
   }
 }
+
+.modal-content {
+  background-color: $background-color;
+  .modal-title,
+  span {
+    color: $primary-color;
+  }
+}
