--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -60,8 +60,8 @@
       transition: all 0.35s;
       opacity: 0.7;
       &:hover {
-        color: white;
-        background-color: black;
+        color: $font-color;
+        background-color: $dark-color;
         opacity: 1;
       }
     }
@@ -83,7 +83,7 @@
       color: $secondary-color;
     }
     &.active .page-link {
-      color: white;
+      color: $font-color;
       background-color: $primary-color;
       border-color: $primary-color;
     }
