--- a/scss/pages/_add_edit_post.scss
+++ b/scss/pages/_add_edit_post.scss
@@ -2,3 +2,16 @@
 .was-validated .form-check-input:valid ~ .form-check-label {
   color: $font-color;
 }
+
+.ql-toolbar.ql-snow {
+  background-color: #fff;
+  color: #212529;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-bottom: 0;
+  border-radius: 0.375rem 0.375rem 0 0;
+}
+
+#editor {
+  border-radius: 0 0 0.375rem 0.375rem;
+}
