--- a/scss/pages/_add_edit_post.scss
+++ b/scss/pages/_add_edit_post.scss
@@ -3,15 +3,10 @@
   color: $font-color;
 }
 
-.ql-toolbar.ql-snow {
+.ql-toolbar.ql-snow,
+.ql-container.ql-snow {
   background-color: #fff;
   color: #212529;
   font-size: 1rem;
-  border: 1px solid #ccc;
-  border-bottom: 0;
-  border-radius: 0.375rem 0.375rem 0 0;
-}
-
-#editor {
-  border-radius: 0 0 0.375rem 0.375rem;
+  border: none;
 }
