--- a/styles/main.css
+++ b/styles/main.css
@@ -228,17 +228,12 @@ section.hero {
   color: white;
 }
 
-.ql-toolbar.ql-snow {
+.ql-toolbar.ql-snow,
+.ql-container.ql-snow {
   background-color: #fff;
   color: #212529;
   font-size: 1rem;
-  border: 1px solid #ccc;
-  border-bottom: 0;
-  border-radius: 0.375rem 0.375rem 0 0;
-}
-
-#editor {
-  border-radius: 0 0 0.375rem 0.375rem;
+  border: none;
 }
 
 /*# sourceMappingURL=main.css.map */
