--- a/styles/main.css
+++ b/styles/main.css
@@ -236,4 +236,12 @@ section.hero {
   border: none;
 }
 
+.editor-focus {
+  color: #212529;
+  background-color: #fff;
+  border-color: #86b7fe;
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+}
+
 /*# sourceMappingURL=main.css.map */
